# metaquest

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SRA_ENHANCED_FEATURES.md  local_test.sh  metaquest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: branchwater.yml  ci.yml  main.yml
doc/: branchwater_workflow.md
docs/: ARCHITECTURE.md  README.md  SRA_ENHANCED_FEATURES.md  branchwater_workflow.md
metaquest/: __init__.py  data_processing.py  data_processing_handler.py  metadata.py  metaquest.py  visualization.py  visualization_handler.py
metaquest/cli/: __init__.py  base.py  commands.py  commands_legacy.py  main.py  main_old.py
metaquest/cli/commands/: __init__.py  advanced_analysis.py  branchwater.py  (+11 more)
metaquest/core/: __init__.py  constants.py  exceptions.py  models.py  utils.py  validation.py
metaquest/data/: __init__.py  branchwater.py  file_io.py  genome_download.py  genome_taxonomy.py  gtdb.py  metadata.py  read_extraction.py  sra.py  sra_enhanced.py  sra_metadata.py  taxonomy.py
metaquest/plugins/: __init__.py  base.py  sourmash_plugin.py
metaquest/processing/: __init__.py  containment.py  counts.py  diversity.py  statistics.py
metaquest/sra/: __init__.py  analytics.py  download_manager.py  reporting.py
metaquest/utils/: __init__.py  browser.py  config.py  html.py  logging.py  security.py
metaquest/visualization/: __init__.py  explorer.py  interactive.py  plots.py  reporting.py
test_data/: parsed_containment.txt  summary_containment.txt
test_data/branchwater/: README.md  salmonella_mini.csv  salmonella_subset.csv
test_data/metadata/: branchwater_metadata.txt
test_data/processed/: example.csv
tests/: conftest.py  test_basic.py  test_browser.py  test_cli_commands.py  test_cli_commands_advanced_analysis.py  test_cli_commands_sra_enhanced.py  test_cli_explore.py  test_cli_genome.py  test_cli_main.py  test_cli_read_extraction.py  test_cli_sra_intelligent.py  test_cli_status.py  test_data_branchwater.py  test_data_file_io.py  test_data_metadata.py  test_data_sra.py  test_diversity.py  test_explorer.py  test_genome_download.py  test_genome_taxonomy.py  test_gtdb.py  test_html_assets.py  test_integration_simple.py  test_interactive_plots.py  test_interactive_plots_extended.py  test_models.py  test_performance_simple.py  test_plugins.py  test_plugins_comprehensive.py  test_processing_containment.py  test_processing_counts.py  test_processing_statistics.py  test_read_extraction.py  test_security_comprehensive.py  test_sourmash_plugin.py  test_sra_analytics.py  test_sra_enhanced.py  test_sra_enhanced_extended.py  test_sra_intelligent_download.py  test_sra_metadata_extended.py  (+11 more)
(+8 files in other folders)
