[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaquest"
version = "0.3.1"
description = "A toolkit for analyzing metagenomic datasets based on genome containment"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Andreas Sjödin", email = "andreas.sjodin@gmail.com"}
]
maintainers = [
    {name = "Andreas Sjödin", email = "andreas.sjodin@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "biopython>=1.79",
    "lxml>=4.6.0",
    "upsetplot>=0.6.0",
    "jinja2>=3.0.0",
    "cartopy>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "flake8>=3.9.0",
    "black>=21.5b0",
    "mypy>=0.812",
]

[project.urls]
Homepage = "https://github.com/FOI-Bioinformatics/metaquest"
Repository = "https://github.com/FOI-Bioinformatics/metaquest"
Issues = "https://github.com/FOI-Bioinformatics/metaquest/issues"

[project.scripts]
metaquest = "metaquest.cli.main:main"

[tool.setuptools.packages.find]
include = ["metaquest*"]

[tool.setuptools.package-data]
metaquest = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["metaquest"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]